Code changes to implement Backend API, Ui, Css for Task adding, Editing, deleting, fetching, user session